# substrate-ord-template

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/json/: Cargo.toml
crates/json/src/: lib.rs
crates/ordinals/: Cargo.toml
crates/ordinals/src/: decimal_sat.rs  etching.rs  flaw.rs  pile.rs  rarity.rs  rune.rs  spaced_rune.rs  terms.rs
crates/ordinals/src/runestone/: message.rs
node/: Cargo.toml
ordinals/: Cargo.toml
ordinals/src/: artifact.rs  cenotaph.rs  charm.rs  degree.rs  edict.rs  epoch.rs  etching.rs  height.rs  lib.rs  rarity.rs  rune.rs  rune_id.rs  runestone.rs  sat.rs  sat_point.rs  spaced_rune.rs  terms.rs  varint.rs
ordinals/src/runestone/: flag.rs  tag.rs
pallets/pallet-ord/: Cargo.toml
pallets/pallet-ord/src/: index.rs  lib.rs  rpc.rs  rpc_json.rs  runes.rs
pallets/pallet-ord/src/index/: entry.rs  event.rs  lot.rs  reorg.rs  updater.rs
pallets/pallet-ord/src/index/updater/: rune_updater.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
