[package]
name = "ordinals"
version = "0.0.8"
edition = "2021"
description = "Library for interoperating with ordinals and inscriptions"
homepage = "https://github.com/ordinals/ord"
repository = "https://github.com/ordinals/ord"
license = "CC0-1.0"
rust-version = "1.74.0"

[dependencies]
bitcoin = { version = "0.30.1", default-features = false, features = ["no-std"] }
derive_more = "0.99.17"
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
serde = { version = "1.0.137", features = ["derive"], default-features = false }
serde_with = {version = "3.7.0", default-features = false, features = ["macros"]}
thiserror-no-std = "2.0.2"
core2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive","max-encoded-len"
] }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }
libm = "0.2.8"
#ahash = {version = "=0.8.7", default-features = false, features = ["runtime-rng"]}
[dev-dependencies]
serde_json = { version = "1.0.81", features = ["preserve_order"] }
pretty_assertions = "1.2.1"
